mjml-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: mjml
  name: mjml
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mjml
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/baserow_default: "true"
        io.kompose.service: mjml
    spec:
      containers:
        - image: liminspace/mjml-tcpserver:latest
          name: mjml
          ports:
            - containerPort: 28101
          resources: {}
      restartPolicy: Always
status: {}
