web-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: web-frontend
  name: web-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web-frontend
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/baserow_default: "true"
        io.kompose.service: web-frontend
    spec:
      containers:
        - image: web-frontend
          name: web-frontend
          ports:
            - containerPort: 3000
          resources: {}
          volumeMounts:
            - mountPath: /web-frontend
              name: web-frontend-claim0
      restartPolicy: Always
      volumes:
        - name: web-frontend-claim0
          persistentVolumeClaim:
            claimName: web-frontend-claim0
status: {}
