web-frontend-deploymentconfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: baserow
    component: baserow-web-frontend
  name: baserow-web-frontend
spec:
  replicas: 1
  selector:
    app: baserow
    deploymentconfig: baserow-web-frontend
  strategy:
    resources: {}
  template:
    metadata:
      labels:
        app: baserow
        deploymentconfig: baserow-web-frontend
    spec:
      containers:
        - env:
          - name: PRIVATE_BACKEND_URL
            value: baserow-backend:8000
          image: " "
          name: baserow-web-frontend
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
  test: false
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - baserow-web-frontend
        from:
          kind: ImageStreamTag
          name: baserow-web-frontend:latest
      type: ImageChange
status:
  availableReplicas: 0
  latestVersion: 0
  observedGeneration: 0
  replicas: 0
  unavailableReplicas: 0
  updatedReplicas: 0
