mjml-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: baserow-mjml
    app: baserow
    app.kubernetes.io/part-of: baserow
    component: baserow-mjml
  name: baserow-mjml
spec:
  ports:
    - name: "baserow-mjml"
      port: 28101
      targetPort: 28101
  selector:
    app: baserow
status:
  loadBalancer: {}
