backend-route.yaml
# Troubleshooting only - do not expose this route in production!
apiVersion: v1
kind: Route
metadata:
  labels:
    app: baserow
    component: baserow-backend
  name: baserow-backend
spec:
  host: baserow-backend-csnr-devops-lab-deploy.pathfinder.gov.bc.ca
  port:
    targetPort: "8000"
  to:
    kind: Service
    name: baserow-backend
  tls:
    termination: edge
